--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -50,7 +50,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request' && secrets.DOCKER_USERNAME != ''
+        if: github.event_name != 'pull_request' && secrets.DOCKER_USERNAME
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
