--- a/charts/s3proxy/templates/externalsecret.yaml
+++ b/charts/s3proxy/templates/externalsecret.yaml
@@ -146,4 +146,37 @@ spec:
         {{- end }}
     {{- end }}
 {{- end }}
+---
+{{- if .Values.externalSecrets.encryption.enabled }}
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: {{ include "s3proxy.fullname" . }}-encryption
+  labels:
+    {{- include "s3proxy.labels" . | nindent 4 }}
+spec:
+  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.externalSecrets.secretStore.name }}
+    kind: {{ .Values.externalSecrets.secretStore.kind }}
+  target:
+    name: {{ .Values.externalSecrets.encryption.targetSecretName }}
+    creationPolicy: Owner
+    template:
+      engineVersion: v2
+      data:
+        {{- if .Values.externalSecrets.encryption.remoteRefs.masterKey.key }}
+        ENCRYPTION_LOCAL_MASTER_KEY: |
+          {{ `{{ .masterKey }}` }}
+        {{- end }}
+  data:
+    {{- if .Values.externalSecrets.encryption.remoteRefs.masterKey.key }}
+    - secretKey: masterKey
+      remoteRef:
+        key: {{ .Values.externalSecrets.encryption.remoteRefs.masterKey.key }}
+        {{- if .Values.externalSecrets.encryption.remoteRefs.masterKey.property }}
+        property: {{ .Values.externalSecrets.encryption.remoteRefs.masterKey.property }}
+        {{- end }}
+    {{- end }}
+{{- end }}
 {{- end }}
