--- a/charts/s3proxy/templates/secret.yaml
+++ b/charts/s3proxy/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.secrets.enabled .Values.config.auth.credential .Values.config.storage.azure.accountKey .Values.config.storage.azure.sasToken .Values.config.storage.s3.accessKey .Values.config.storage.s3.secretKey (and .Values.awsCredentials.enabled .Values.awsCredentials.accessKeyId) }}
+{{- if or .Values.secrets.enabled .Values.config.auth.credential .Values.config.storage.azure.accountKey .Values.config.storage.azure.sasToken .Values.config.storage.s3.accessKey .Values.config.storage.s3.secretKey (and .Values.awsCredentials.enabled .Values.awsCredentials.accessKeyId) .Values.config.encryption.local.masterKey }}
 ---
 apiVersion: v1
 kind: Secret
@@ -23,9 +23,14 @@ data:
   {{- if and (eq .Values.config.storage.provider "s3") .Values.config.storage.s3.secretKey }}
   s3-secret-key: {{ .Values.config.storage.s3.secretKey | b64enc | quote }}
   {{- end }}
-  {{- if and .Values.awsCredentials.enabled .Values.awsCredentials.accessKeyId (not .Values.awsCredentials.existingSecret) }}
+  {{- if and .Values.awsCredentials.enabled .Values.awsCredentials.accessKeyId }}
+  {{- if not .Values.awsCredentials.existingSecret }}
   aws-access-key-id: {{ .Values.awsCredentials.accessKeyId | b64enc | quote }}
   aws-secret-access-key: {{ .Values.awsCredentials.secretAccessKey | b64enc | quote }}
+  {{- end }}
+  {{- end }}
+  {{- if .Values.config.encryption.local.masterKey }}
+  encryption-master-key: {{ .Values.config.encryption.local.masterKey | b64enc | quote }}
   {{- end }}
   {{- range $key, $value := .Values.secrets.data }}
   {{ $key }}: {{ $value | b64enc | quote }}
