--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,80 +1,62 @@
-# Pre-commit hooks for s3proxy-go
-# Install with: pre-commit install
-
 repos:
-  # Go formatting and linting
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.1
-    hooks:
-      - id: go-fmt
-      # - id: go-vet  # Disabled - golangci-lint includes govet
-      - id: go-imports
-      - id: go-cyclo
-        args: [-over=25]
-      - id: golangci-lint
-      - id: go-mod-tidy
-      - id: go-unit-tests
-        name: go-unit-tests
-        entry: go test
-        files: '\.go$'
-        args: ["./..."]
-        pass_filenames: false
-        types: [go]
-        language: system
-
-  # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-        exclude: ^(charts/.*\.yaml|examples/kubernetes/.*\.yaml)$
       - id: check-added-large-files
-        args: ['--maxkb=1000']
       - id: check-merge-conflict
-      - id: check-json
-      - id: pretty-format-json
-        args: ['--autofix', '--indent=2']
       - id: detect-private-key
-      - id: check-executables-have-shebangs
-      - id: check-shebang-scripts-are-executable
 
-  # Security scanning
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.1
+    hooks:
+      - id: gitleaks
+
+  - repo: https://github.com/dnephin/pre-commit-golang
+    rev: v0.5.1
+    hooks:
+      - id: go-fmt
+      - id: go-vet
+      - id: go-imports
+      - id: go-cyclo
+        args: [-over=15]
+      - id: golangci-lint
+      - id: go-mod-tidy
+      - id: go-unit-tests
+
+  - repo: https://github.com/syntaqx/file-fix
+    rev: v0.1.3
+    hooks:
+      - id: fix-byte-order-marker
+      - id: fix-smartquotes
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+      - id: bandit
+        args: ['-ll']
+        files: .py$
+
   - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.5.0
+    rev: v1.4.0
     hooks:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
 
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.18.2
+  - repo: local
     hooks:
-      - id: gitleaks
+      - id: go-security-check
+        name: Go Security Check
+        entry: bash -c 'command -v gosec >/dev/null 2>&1 && gosec -fmt json -out gosec-report.json ./... || echo "gosec not installed, skipping"'
+        language: system
+        pass_filenames: false
+        files: '\.go$'
 
-  # Markdown
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.45.0
-    hooks:
-      - id: markdownlint
-        args: ['--fix']
-
-  # YAML
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.37.1
-    hooks:
-      - id: yamllint
-        args: [-c=.yamllint.yaml]
-        exclude: ^charts/.*/templates/.*\.yaml$
-
-  # Shell scripts
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.10.0.1
-    hooks:
-      - id: shellcheck
-
-  # Git commit messages
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.19.1
-    hooks:
-      - id: gitlint
+      - id: dockerfile-lint
+        name: Dockerfile Lint
+        entry: bash -c 'command -v hadolint >/dev/null 2>&1 && find . -name "Dockerfile*" -exec hadolint {} \; || echo "hadolint not installed, skipping"'
+        language: system
+        pass_filenames: false
+        files: 'Dockerfile'
